<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/productPhoto"
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                tools:src="@drawable/acernitro7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/tv_product_title_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Acer Predator Hellio 8/1TB SSD Core i7 NVIDIA RTX" />

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                tools:text="Rp 15.000.000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light"
            android:orientation="vertical"
            android:layout_marginTop=".5dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spesification"
                android:textColor="@android:color/black"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:text="@string/stok" />
                    <TextView
                        android:id="@+id/tv_spesification_stok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="10" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Merek"
                        android:layout_marginEnd="40dp"/>
                    <TextView
                        android:id="@+id/tv_spesification_merek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Acer Nitro 5"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/os"
                        android:layout_marginEnd="40dp"/>
                    <TextView
                        android:id="@+id/tv_spesification_os"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Windows 10"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resolusi"
                        android:layout_marginEnd="40dp"/>
                    <TextView
                        android:id="@+id/tv_spesification_resolusi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="1920 x 1080"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/memory"
                        android:layout_marginEnd="40dp"/>
                    <TextView
                        android:id="@+id/tv_spesification_spek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="512 SSD | 8 GB"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop=".5dp"
            android:background="@drawable/bg_light"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/tv_product_subtitle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Acer Predator" />

            <TextView
                android:id="@+id/tv_product_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="There are many variations of passages of Lorem Ipsum.There are many variations of passages of Lorem Ipsum available, but the majority have suffered, There are many variations of passages of Lorem Ipsum available, but the majority have suffered available, but the majority have suffered There are many variations of passages of Lorem Ipsum available, but the majority have suffered " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_light"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <ImageButton
                android:id="@+id/btn_cart"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight=".75"
                android:background="#FFE91E63"
                android:src="@drawable/ic_cart" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@color/colorAccent"
                android:text="@string/buy"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/spesification"-->
    <!--android:layout_marginTop="25dp"/>-->
    <!--<TableLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="25dp">-->
    <!--<TableRow>-->
    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text=""/>-->
    <!--</TableRow>-->
    <!--</TableLayout>-->
